the bug report.

=item *

Fixed a regression that occurred in S<INN 2.5.3> regarding the path used
by default by B<pullnews> for its configuration file.  Instead of looking
in the running user's home directory, it was looking in the I<pathnews>
directory parametered in F<inn.conf>.  Thanks to Tony Evans for the
bug report.

=item *

B<ckpasswd> no longer tries to use the ndbm compatibility layer provided
by S<Berkeley DB> if S<Berkeley DB> has been built without ndbm support.
Also add support for gdbm libraries in B<ckpasswd>.

=item *

Fixed a Perl warning in B<inncheck>; using C<defined(@array)> has been
deprecated since S<Perl 5.16>.

=item *

Fixed the occurrence of an unexpected C<cant select> error generated by
B<innd>.  Thanks to Paul Tomblin for having caught that long-standing
issue.

=item *

When building INN with S<Berkeley DB> support, no longer add
F<-L/usr/lib> to the linker include flags; unconditionally adding it
may break the build on systems using lib32 and lib64 directories.

=back

=head1 Changes in 2.5.3

Please note that the HTML_STATUS compile-time option has been replaced
with the I<htmlstatus> parameter in F<inn.conf>.  If you used HTML_STATUS,
you should set I<htmlstatus> accordingly.

A confusion in the name of a key in F<innfeed.conf> existed in the source
code.  Make sure that the misspelled, undocumented I<backlog-limit-high>
key is *not* used in your F<innfeed.conf> file; its real name is
I<backlog-limit-highwater>.  You should rename the key in case it is present
in your configuration file.  Otherwise, it will not be taken into account.
You can run B<inncheck> to verify that the syntax of this file is correct.

It is generally recommended to run B<inncheck> after any changes done to
configuration files, especially with the new improved version of this script
shipped with S<INN 2.5.3>, thanks to the hard work of Florian Schlichting
who added support for the syntax of F<incoming.conf>, F<innfeed.conf>,