@@ -81,7 +81,7 @@ PERL='@PERL@'
 GPGV='@GPGV@'
 PGP='@PGP@'
 SORT='@SORT@'
-GETFTP='@PATH_GETFTP@'
+GETFTP="@PATH_GETFTP@"
 UUSTAT='@UUSTAT@'
 UUX='@UUX@'
 
